--- a/src/blocks/modules/footer/footer.scss
+++ b/src/blocks/modules/footer/footer.scss
@@ -7,6 +7,9 @@
 
     .row {
         justify-content: space-between;
+        @media (max-width: 767px) {
+            justify-content: center;
+        }
     }
 
     &__left, &__right {
@@ -18,6 +21,9 @@
     }
 
     &__left {
+        @media (max-width: 767px) {
+            margin-bottom: 24px;
+        }
         .footer__link {
 
             &:last-child {
@@ -40,6 +46,9 @@
         font-size: 16px;
         line-height: 1.25;
         margin-right: 32px;
+        @media (max-width: 767px) {
+            margin-right: 24px;
+        }
         &:last-child {
             margin-right: 0;
         }
