--- a/src/styles/base/_icons.scss
+++ b/src/styles/base/_icons.scss
@@ -99,4 +99,8 @@
     &--more-answer {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0H24V24H0z'/%3E%3Cg%3E%3Cpath stroke='%231A1A1A' stroke-width='1.8' d='M.5 0c-.244 8.133 3.074 12.2 9.954 12.2' transform='translate(6 4)'/%3E%3Cpath fill='%231A1A1A' d='M10 8L10 16 14 12z' transform='translate(6 4)'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
     }
+
+    &--close-gray {
+        background-image: url("data:image/svg+xml,%3Csvg width='24px' height='24px' viewBox='0 0 24 24' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='desktop-header-menu-1280' transform='translate(-317.000000, -24.000000)'%3E%3Cg id='Group-4'%3E%3Cg id='Group-3'%3E%3Cg id='Group-Copy' transform='translate(317.000000, 24.000000)'%3E%3Cg id='icon/M/delet/ative'%3E%3Cg id='icon'%3E%3Cg id='Group'%3E%3Crect id='Rectangle' x='0' y='0' width='24' height='24'%3E%3C/rect%3E%3Cpolyline id='Path' stroke='%23909099' stroke-width='1.8' points='18 18 12 12 6 6'%3E%3C/polyline%3E%3Cpolyline id='Path' stroke='%23909099' stroke-width='1.8' points='18 6 12 12 6 18'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    }
 }
