--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -1,19 +1,52 @@
 .main-page {
     padding-top: 32px;
+    @media(max-width:767px) {
+        padding-top: 0;
+    }
 
     .news__row .news-slider {
         height: 400px;
-
         @media (max-width: 1280px) {
             height: 328px;
         }
+        @media(max-width:767px) {
+            margin-bottom: 16px;
+            height: auto;
 
+            .swiper-button {
+                display: none;
+            }
+        }
+
+        @media (max-width: 576px) {
+            margin-right: -8px;
+            margin-left: -8px;
+            padding-left: 0;
+            padding-right: 0;
+            width: auto;
+            max-width: calc(100vw - 16px);
+        }
         .swiper-slide {
+            @media(max-width:767px) {
+                .card {
+                    border-radius: 0;
+                }
+            }
+            @media(max-width:767px) {
+                height: 414px;
+            }
+            @media(max-width:413px) {
+                height: 320px;
+            }
             .card--image {
                 .card-title {
                     @media (max-width: 1280px) {
                         font-size: rem(32);
                         line-height: 1.25;
+                    }
+                    @media (max-width: 1023px) {
+                        font-size: rem(24);
+                        line-height: 1.33;
                     }
                 }
 
@@ -25,6 +58,9 @@
                         font-size: rem(16);
                         line-height: 1.25;
                     }
+                    @media (max-width: 1023px) {
+                        display: block;
+                    }
                 }
             }
         }
@@ -34,11 +70,15 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding-top: 16px;
         margin-bottom: 48px;
+        @media(max-width:767px) {
+            margin-bottom: 32px;
+            padding: 0 16px;
+        }
     }
 
     &__link {
+        margin-top: 16px;
         display: flex;
         flex: 0 0 auto;
         flex-direction: column;
@@ -47,17 +87,24 @@
         width: 100%;
         max-width: 167px;
         text-align: center;
+        @media (max-width: 1023px) {
+            max-width: 136px;
+        }
+        @media(max-width:767px) {
+            flex-direction: row;
+            justify-content: flex-start;
+            max-width: none;
+            margin-top: 0;
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
 
         &:hover {
             text-decoration: none;
 
-            .main-page__link-img {
-                .normal {
-                    display: none;
-                }
-
-                .hover {
-                    display: block;
+            svg {
+                circle {
+                    fill: $coral;
                 }
             }
 
@@ -70,14 +117,14 @@
             width: 48px;
             height: 48px;
             margin-bottom: 8px;
+            @media(max-width:767px) {
+                margin-right: 16px;
+                margin-bottom: 0;
+            }
 
-            img {
+            svg {
                 display: block;
                 width: 100%;
-
-                &.hover {
-                    display: none;
-                }
             }
         }
 
@@ -93,9 +140,19 @@
     &__slider {
         margin-bottom: 48px;
         width: 100%;
+        @media(max-width:767px) {
+            width: auto;
+            max-width: calc(100vw - 32px);
+            margin-right: -16px;
+            margin-bottom: 32px;
+        }
+
 
         .swiper-slide {
             max-width: 296px;
+            @media(max-width:767px) {
+                max-width: 272px;
+            }
         }
 
         .swiper-button {
@@ -105,15 +162,78 @@
 
     &__slider-item {
         display: block;
+        position: relative;
         width: 296px;
         height: 168px;
         overflow: hidden;
         border-radius: 5px;
         background-color: $silver-light;
+        @media(max-width:767px) {
+            width: 272px;
+            height: 154px;
+            border-radius: 4.6px;
+        }
     }
 
     &__slider-img {
         display: block;
         width: 100%;
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: right center;
+        }
+    }
+
+    &__slider-content {
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        @media(max-width:767px) {
+            padding: 18px;
+        }
+
+        .title {
+            font-size: rem(16);
+            font-weight: $font-weight-bold;
+            line-height: 1.25;
+            color: #f8d7d5;
+            margin-bottom: 8px;
+            @media(max-width:767px) {
+                font-size: rem(14);
+                line-height: 1.31;
+            }
+        }
+        .text {
+            font-size: rem(20);
+            font-weight: $font-weight-bold;
+            line-height: 1.2;
+            color: $white;
+            @media(max-width:767px) {
+                font-size: rem(18.4);
+            }
+        }
+
+        .date {
+            font-size: rem(16);
+            line-height: 1.25;
+            color: $white;
+            margin-top: auto;
+            margin-bottom: 0;
+            @media(max-width:767px) {
+                font-size: rem(14);
+                line-height: 1.31;
+            }
+        }
     }
 }
