--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -19,3 +19,4 @@
 @import 'modules/select/select';
 @import 'modules/dataselect/dataselect';
 @import 'modules/unknown/unknown';
+@import 'modules/header-search/header-search';
