--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -1,7 +1,27 @@
 .main-page {
     padding-top: 32px;
+    @media (max-width: 1279px) {
+        padding-top: 24px;
+    }
     @media(max-width:767px) {
         padding-top: 0;
+    }
+
+
+    .news__row {
+        margin-left: -16px;
+        margin-right: -16px;
+
+        @media (max-width: 1279px) {
+            margin-left: -12px;
+            margin-right: -12px;
+        }
+        @media (max-width: 1023px){
+            margin-left: -16px;
+            margin-right: -16px;
+            width: auto;
+            max-width: 100vw;
+        }
     }
 
     .news__row .news-slider {
@@ -19,12 +39,11 @@
         }
 
         @media (max-width: 576px) {
-            margin-right: -8px;
-            margin-left: -8px;
             padding-left: 0;
             padding-right: 0;
-            width: auto;
-            max-width: calc(100vw - 16px);
+            width: 100vw;
+            max-width: 100vw;
+
         }
         .swiper-slide {
             @media(max-width:767px) {
@@ -39,6 +58,16 @@
                 height: 320px;
             }
             .card--image {
+                position: relative;
+                &:after {
+                    content: '';
+                    left: 0;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    position: absolute;
+                    background-color: rgba(0, 0, 0, 0.2);
+                }
                 .card-title {
                     @media (max-width: 1280px) {
                         font-size: rem(32);
@@ -87,6 +116,9 @@
         width: 100%;
         max-width: 167px;
         text-align: center;
+        @media (max-width: 1279px) {
+            margin-top: 24px;
+        }
         @media (max-width: 1023px) {
             max-width: 136px;
         }
@@ -142,9 +174,10 @@
         width: 100%;
         @media(max-width:767px) {
             width: auto;
-            max-width: calc(100vw - 32px);
+            max-width: calc(100vw - 16px);
             margin-right: -16px;
             margin-bottom: 32px;
+            padding-left: 8px;
         }
 
 
