--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -45,6 +45,11 @@ body {
         margin-left: -8px;
         margin-right: -8px;
     }
+
+    &--long {
+        margin-right: -40px;
+        margin-left: -40px;
+    }
 }
 
 .wrapper {
