--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -20,3 +20,4 @@
 @import 'modules/dataselect/dataselect';
 @import 'modules/unknown/unknown';
 @import 'modules/header-search/header-search';
+@import 'modules/imagePopup/imagePopup';
