--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -15,6 +15,9 @@ $white: #fff;
 $border-40: #999;
 $border-20: #ccc;
 $border-10: #e6e6e6;
+
+$coral-opacity: rgba(246, 92, 81, 0.3);
+
 $colors: ();
 $colors: map_merge((
     'text-black': $text-black,
